# Emulator_CS2102

./: .gitignore  CMakeLists.txt  README.md
include/: api.h  common_types.h  datapath.h  devices.h  err_codes.h  ui.h
logisim/: datapath.circ
src/: api.c  datapath.c  devices.c  main.c  ui.c
tests/: test_api.c  test_datapath.c  test_devices.c
